fixed chocolatey bug1

--- a/custom.html
+++ b/custom.html
@@ -9,7 +9,7 @@
    <style>
       @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
    </style>
-   <title>Home</title>
+   <title>Custom Order</title>
 </head>
 
 <body>
