expanded and sensitive

--- a/custom.html
+++ b/custom.html
@@ -35,24 +35,24 @@
             <h2>Step 1: </h2>
             <p>Please rate how much you value the following factors in your cereal. Use a scale from 1-10. </p>
             </br>
-            <label for="diversity">Diversity:</label>
-            <input type="text" id="diversity" name="diversity" value="">
-            <br>
-            <label for="health">Healthiness:</label>
-            <input type="text" id="health" name="health" value="">
-            <br>
-            <label for="fruit">Eaten with Fruit:</label>
-            <input type="text" id="fruit" name="fruit" value="">
-            <br>
-            <label for="sugar">Sugar and Sweetness:</label>
-            <input type="text" id="sugar" name="sugar" value="">
-            <br>
-            <label for="mix">Mixing Value:</label>
-            <input type="text" id="mix" name="mix" value="">
-            <br>
-            <label for="choc">Chocolatiness:</label>
-            <input type="text" id="choc" name="choc" value="">
-            <br><br>
+            <div class="input"><label for="diversity">Diversity:</label>
+               <input type="text" id="diversity" name="diversity" value="">
+            </div>
+            <div class="input"><label for="health">Healthiness:</label>
+               <input type="text" id="health" name="health" value="">
+            </div>
+            <div class="input"><label for="fruit">Eaten with Fruit:</label>
+               <input type="text" id="fruit" name="fruit" value="">
+            </div>
+            <div class="input"><label for="sugar">Sugary Sweetness:</label>
+               <input type="text" id="sugar" name="sugar" value="">
+            </div>
+            <div class="input"><label for="mix">Mixing Value:</label>
+               <input type="text" id="mix" name="mix" value="">
+            </div>
+            <div class="input"><label for="choc">Chocolatiness:</label>
+               <input type="text" id="choc" name="choc" value="">
+            </div><br>
          </div>
          <img src="images/cereal2.png">
       </div>
@@ -190,6 +190,54 @@
                <p>Info Info Info Info Info Info Info</p>
             </div>
             <img src="images/specialkred.png">
+         </div>
+         <div class="results">
+            <div>
+               <h3>Cocoa Krispies</h3>
+               <p>Quantity: <span>5</span></p><br>
+               <p>Info Info Info Info Info Info Info</p>
+            </div>
+            <img src="images/cokisp.png">
+         </div>
+         <div class="results">
+            <div>
+               <h3>Cocoa Pebbles</h3>
+               <p>Quantity: <span>5</span></p><br>
+               <p>Info Info Info Info Info Info Info</p>
+            </div>
+            <img src="images/cpebs.png">
+         </div>
+         <div class="results">
+            <div>
+               <h3>Special K: Fruit & Yogurt</h3>
+               <p>Quantity: <span>5</span></p><br>
+               <p>Info Info Info Info Info Info Info</p>
+            </div>
+            <img src="images/specialkpurp.png">
+         </div>
+         <div class="results">
+            <div>
+               <h3>Chocolate Mini Wheats Little Bites</h3>
+               <p>Quantity: <span>5</span></p><br>
+               <p>Info Info Info Info Info Info Info</p>
+            </div>
+            <img src="images/chowheats.png">
+         </div>
+         <div class="results">
+            <div>
+               <h3>Honey O's</h3>
+               <p>Quantity: <span>5</span></p><br>
+               <p>Info Info Info Info Info Info Info</p>
+            </div>
+            <img src="images/honeyos.png">
+         </div>
+         <div class="results">
+            <div>
+               <h3>Krave</h3>
+               <p>Quantity: <span>5</span></p><br>
+               <p>Info Info Info Info Info Info Info</p>
+            </div>
+            <img src="images/krave.png">
          </div>
       </div>
    </main>
