home page and improved js & css

--- a/about.html
+++ b/about.html
@@ -9,11 +9,13 @@
    <style>
       @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
    </style>
-   <title>Home</title>
+   <title>About</title>
 </head>
 
 <body>
    <header>
+      <div class="top"></div>
+      <a href="#main-content" id="skip" tabindex="0">Skip to Main Content</a>
       <nav>
          <a href="index.html" class="noncurrent"><img src="images/cereal.png">CEREAL CORNER</a>
          <a href="custom.html" class="noncurrent">Your Cereals</a>
@@ -28,7 +30,7 @@
          <a href="about.html" class="curr">About</a>
       </div>
    </header>
-   <main>
+   <main id="main-content">
 
    </main>
 </body>
@@ -38,17 +40,17 @@
       <div>
          <h3>About</h3>
          <div class="first-footer-sub">
-            <a href="https://github.com/philipchurchley">Github</a>
-            <a href="https://soundcloud.com/philip-churchley">SoundCloud</a>
-            <a href="https://www.youtube.com/@PhilipChurchley">YouTube</a>
+            <a href="https://github.com/philipchurchley" target="_blank">Github</a>
+            <a href="https://soundcloud.com/philip-churchley" target="_blank">SoundCloud</a>
+            <a href="https://www.youtube.com/@PhilipChurchley" target="_blank">YouTube</a>
          </div>
       </div>
       <div>
          <h3>Contact</h3>
          <div class="first-footer-sub">
-            <a href="https://www.instagram.com/p.churchley/">Instagram</a>
-            <a href="https://www.linkedin.com/in/philip-churchley/">LinkedIn</a>
-            <a href="mailto:pchurchl@umich.edu">pchurchl@umich.edu</a>
+            <a href="https://www.instagram.com/p.churchley/" target="_blank">Instagram</a>
+            <a href="https://www.linkedin.com/in/philip-churchley/" target="_blank">LinkedIn</a>
+            <a href="mailto:pchurchl@umich.edu" target="_blank">pchurchl@umich.edu</a>
          </div>
       </div>
    </div>
