--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="css/html5reset.css">
+   <link rel="stylesheet" href="css/carousel.css">
    <link rel="stylesheet" href="css/style.css">
    <style>
       @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
@@ -14,6 +15,8 @@
 
 <body>
    <header>
+      <div class="top"></div>
+      <a href="#main-content" id="skip" tabindex="0">Skip to Main Content</a>
       <nav>
          <a href="index.html" class="current"><img src="images/cereal.png">CEREAL CORNER</a>
          <a href="custom.html" class="noncurrent">Your Cereals</a>
@@ -28,8 +31,82 @@
          <a href="about.html">About</a>
       </div>
    </header>
-   <main>
-      <p> main content </p>
+   <main id="main-content">
+      <h1>Welcome to the Cereal Corner</h1>
+      <!--intro-->
+      <div class="step intro">
+         <p><em>Oh hey!</em> Welcome to the Cereal Corner. While you're here, you can learn about anything cereal
+            related.</p><br><br><br>
+         <p>Whether it be breakfast, dessert, midafternoon snack or midnight snack, cereal is always a great option
+            for hungry stomachs. In fact, it's no exaggeration to say that cereal is possibly one of the most underrated
+            foods in the grocery store.
+            But I get it, choosing from endless options in the cereal aisle can seem almost impossible at first.
+            Hopefully this website can help change that for you. Look at the cards below to learn about some factors to
+            take into account before picking out cereal. Then, check out the <a href="/custom.html">Your Cereals</a>
+            page to help you select what cereals you should buy based on your preferences!
+         </p>
+      </div>
+      <div id="cerealfactors">
+         <h2>Cereal Factors:</h2>
+      </div>
+      <!--info on cereal factors (carousel?)-->
+      <div class="container">
+         <div class="card-carousel">
+            <div class="card step" id="1" title="Try dragging to rotate through the cards">
+               <div class="image-container"></div>
+               <p>
+               <h3>Mixing Value: </h3> Mixing value represents how well a cereal can mix with granola or other cereals.
+               Mixing cereals is a great way to add flavor and diversify the texture of each bite. For mix enthusiasts,
+               Honey Bunches of Oats are a must.
+               </p>
+            </div>
+            <div class="card step" id="2" title="Try dragging to rotate through the cards">
+               <div class="image-container"></div>
+               <p>
+               <h3>Chocolatiness: </h3> Chocolate Cereals are a favorite for many. You can thank them for the classic
+               chocolate milk that's left in your bowl when you're done with your cereal. Rate a 5 for no consideration
+               towards chocolatiness, or higher/lower depending on your preference.
+               </p>
+            </div>
+            <div class="card step" id="3" title="Try dragging to rotate through the cards">
+               <div class="image-container"></div>
+               <p>
+               <h3>Healthiness: </h3> News flash! Cereal does not have to be an unhealthy breakfast option. Healthy
+               cereals shouldn't be highly processed and can usually be identified by their low sugar and high whole
+               grain contents. Luckily, you don't need to sacrifice great taste :)
+               </p>
+            </div>
+            <div class="card step" id="4" title="Try dragging to rotate through the cards">
+               <div class="image-container"></div>
+               <p>
+               <h3>Fruit Value: </h3> A cereal's fruit value corresponds to how well it pairs with fruit. Adding fruit
+               to cereal is a great way to make your meal both healthier and tastier! Some great fruits to add are
+               strawberries, blueberries, blackberries, or raspberries.
+               </p>
+            </div>
+            <div class="card step" id="5" title="Try dragging to rotate through the cards">
+               <div class="image-container"></div>
+               <p>
+               <h3>Sugary Sweetness: </h3> Sugary cereals are great for people who have a strong sweet tooth. They make
+               amazing snacks or desserts, and are also great ways to treat yourself for breakfast.
+               </p>
+            </div>
+         </div>
+         <a href="#" class="visuallyhidden card-controller">Carousel controller</a>
+      </div>
+      <div id="arrows"><button id="right" tabindex="0">&lt</button><button id="left" tabindex="0">&gt</button></div>
+      <div class="step intro">
+         <p>
+         <h3>Diversity: </h3> The final thing to think about is your cereal order's diversity. How many different types
+         of cereal do you hope to buy? Do you want the same thing every morning or do you like to have a large rotation?
+         When choosing your cereal order, note that a diversity rating of 10 corresponds to a limit of buying only up to
+         one box of each cereal, while a rating of 1 corresponds to a limit of 6.
+         </p>
+         <br>
+         <p>Also, note that the "Conserve my Money" checkbox will optimize your order, giving you the most ounces of
+            cereal for your specified price point and cereal preference. </p>
+      </div>
+      <br><br><br>
    </main>
 </body>
 
@@ -38,17 +115,17 @@
       <div>
          <h3>About</h3>
          <div class="first-footer-sub">
-            <a href="https://github.com/philipchurchley">Github</a>
-            <a href="https://soundcloud.com/philip-churchley">SoundCloud</a>
-            <a href="https://www.youtube.com/@PhilipChurchley">YouTube</a>
+            <a href="https://github.com/philipchurchley" target="_blank">Github</a>
+            <a href="https://soundcloud.com/philip-churchley" target="_blank">SoundCloud</a>
+            <a href="https://www.youtube.com/@PhilipChurchley" target="_blank">YouTube</a>
          </div>
       </div>
       <div>
          <h3>Contact</h3>
          <div class="first-footer-sub">
-            <a href="https://www.instagram.com/p.churchley/">Instagram</a>
-            <a href="https://www.linkedin.com/in/philip-churchley/">LinkedIn</a>
-            <a href="mailto:pchurchl@umich.edu">pchurchl@umich.edu</a>
+            <a href="https://www.instagram.com/p.churchley/" target="_blank">Instagram</a>
+            <a href="https://www.linkedin.com/in/philip-churchley/" target="_blank">LinkedIn</a>
+            <a href="mailto:pchurchl@umich.edu" target="_blank">pchurchl@umich.edu</a>
          </div>
       </div>
    </div>
@@ -57,5 +134,6 @@
    </div>
 </footer>
 <script src="js/cereal.js"></script>
+<script src="js/carousel.js"></script>
 
 </html>
