--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
       <div class="top"></div>
       <a href="#main-content" id="skip" tabindex="0">Skip to Main Content</a>
       <nav>
-         <a href="index.html" class="noncurrent"><img src="images/cereal.png">CEREAL CORNER</a>
+         <a href="index.html" class="noncurrent"><img src="images/cereal.png" alt="cereal graphic">CEREAL CORNER</a>
          <a href="custom.html" class="noncurrent">Your Cereals</a>
          <a href="favs.html" class="noncurrent">Phil's Favs</a>
          <a href="about.html" class="current">About</a>
@@ -31,7 +31,38 @@
       </div>
    </header>
    <main id="main-content">
-
+      <h1>Philip Churchley</h1>
+      <div id="about-grid">
+         <img src="images/philip.JPG" alt="Picture of Philip">
+         <div class="step">
+            <h2>About Philip</h2><br>
+            <p>Philip Churchley is a student pursuing a degree in computer science at the University of
+               Michigan, College of Engineering. Philip is passionate about computing and technology, anticipating
+               many great future projects to come. Besides that, he is a huge soccer fan, music enjoyer, and of course,
+               cereal enthusiast. When not working on projects or eating cereal, you can find Philip traveling, watching
+               movies, listening to music, or going on adventures with friends. </p>
+         </div>
+         <div class="step">
+            <h2>About This Website</h2><br>
+            <p>This website was created using html, css, and javascript. The "Create your own Cereal Order" generator
+               operates
+               using ratings of 21 cereals based on the personal experience of 20 years eating cereal almost every day.
+               Although each rating was intended to avoid any bias, it should be noted that there will always be a level
+               of subjectivity. Each recommendation is generated using a greedy algorithm that selects cereals with the
+               best value given the user's input. When the "conserve my money" option is selected, the recommendations
+               are generated using dynamic programming. The algorithm used is similar to that of the 0-1 knapsack
+               problem, with "weights" determined by each cereal's approximate price per ounce.
+            </p>
+         </div>
+         <div class="step">
+            <h2>Other Projects</h2><br>
+            <ul>
+               <li><a href="http://open-course.co:8000/" target="_blank">Open Course</a></li>
+               <li><a href="files/_Soccer WSA_ Final Presentation.pdf" target="_blank">Soccer Transfer Market Data
+                     Analytics</a></li>
+               <li>Chelsea Data Analytics (Coming Soon...)</li>
+            </ul>
+         </div>
    </main>
 </body>
 
