--- a/custom.html
+++ b/custom.html
@@ -17,7 +17,7 @@
       <div class="top"></div>
       <a href="#main-content" id="skip" tabindex="0">Skip to Main Content</a>
       <nav>
-         <a href="index.html" class="noncurrent"><img src="images/cereal.png">CEREAL CORNER</a>
+         <a href="index.html" class="noncurrent"><img src="images/cereal.png" alt="cereal graphic">CEREAL CORNER</a>
          <a href="custom.html" class="current">Your Cereals</a>
          <a href="favs.html" class="noncurrent">Phil's Favs</a>
          <a href="about.html" class="noncurrent">About</a>
@@ -61,7 +61,7 @@
                <input type="text" id="choc" name="choc" value="">
             </div><br>
          </div>
-         <img src="images/cereal2.png">
+         <img src="images/cereal2.png" alt="Cereal Box Graphic">
       </div>
       <div class="step step1">
          <div>
@@ -74,7 +74,7 @@
             <div tabindex="0" id="priceopt" name="priceopt" title="Prioritizes cost efficient cereals"></div>
             <br><br>
          </div>
-         <img src="images/money.png">
+         <img src="images/money.png" alt="Dollar Bill Graphic">
       </div>
       <button id="submit">Submit</button>
       <br>
@@ -84,169 +84,196 @@
             <div>
                <h3>Cheerios</h3>
                <p>Quantity: <span>5</span></p><br>
-               <p>Info Info Info Info Info Info Info</p>
+               <p>Honey Nut Cheerios is a classic cereal that goes great with fruit. Pro tip: look for knockoffs if you
+                  prefer a slightly less sweet option. </p>
             </div>
-            <img src="images/cheerios.png">
+            <img src="images/cheerios.png" alt="Cheerios Box">
          </div>
          <div class="results">
             <div>
                <h3>Chocolate Chex</h3>
                <p>Quantity: <span>5</span></p><br>
-               <p>Info Info Info Info Info Info Info</p>
+               <p>Chocolate Chex are a great addition to any cereal order. They go well mixed, with fruit, or by
+                  themselves. Chocolate Chex also serves well as a chocolatey cereal that isn't overly sweet.</p>
             </div>
-            <img src="images/chex.png">
+            <img src="images/chex.png" alt="Chocolate Chex Box">
          </div>
          <div class="results">
             <div>
                <h3>Cinnamon Toast Crunch</h3>
                <p>Quantity: <span>5</span></p><br>
-               <p>Info Info Info Info Info Info Info</p>
+               <p>Cinnamon Toast Crunch is a favorite for many because of its great cinnamon sweetness and texture. CTC
+                  can make a delicious breakfast, snack, or dessert.</p>
             </div>
-            <img src="images/ctc.png">
+            <img src="images/ctc.png" alt="Cinnamon Toast Crunch Box">
          </div>
          <div class="results">
             <div>
                <h3>Fruit Loops</h3>
                <p>Quantity: <span>5</span></p><br>
-               <p>Info Info Info Info Info Info Info</p>
+               <p>Fruit loops are perfect for those who like fruity-sweet cereals. Eat Fruit loops go great as breakfast
+                  or a snack, achieving great fruity flavor without any real fruit needed.</p>
             </div>
-            <img src="images/floops.png">
+            <img src="images/floops.png" alt="Fruit Loops Box">
          </div>
          <div class="results">
             <div>
                <h3>Frosted Flakes</h3>
                <p>Quantity: <span>5</span></p><br>
-               <p>Info Info Info Info Info Info Info</p>
+               <p>Frosted Flakes are a reasonably sugary cereal that can be paired with fruit to make an energizing
+                  start to your day. If you find them too sweet, look for alternative brand options or mix with less
+                  sweet granola.</p>
             </div>
-            <img src="images/froflakes.png">
+            <img src="images/froflakes.png" alt="Frosted Flakes Box">
          </div>
          <div class="results">
             <div>
                <h3>Great Grains</h3>
                <p>Quantity: <span>5</span></p><br>
-               <p>Info Info Info Info Info Info Info</p>
+               <p>If you're looking for a great, healthy mixer, look no further than Great Grains, Cranberry Almond
+                  Crunch. Great Grains is a versatile cereal that can be mixed with fruit or other flake based cereals
+                  (or eaten by itself!).
+               </p>
             </div>
-            <img src="images/greatgrains.png">
+            <img src="images/greatgrains.png" alt="Great Grains Box">
          </div>
          <div class="results">
             <div>
                <h3>Honey Bunches of Oats</h3>
                <p>Quantity: <span>5</span></p><br>
-               <p>Info Info Info Info Info Info Info</p>
+               <p>Honey Bunches of Oats are the base to any great cereal order. You'll find them delicious when eaten as
+                  breakfast or a midnight snack. Try mixing them with any cereal and any fruit. </p>
             </div>
-            <img src="images/hboo.png">
+            <img src="images/hboo.png" alt="Honey Bunches of Oats Box">
          </div>
          <div class="results">
             <div>
                <h3>Life Cereal</h3>
                <p>Quantity: <span>5</span></p><br>
-               <p>Info Info Info Info Info Info Info</p>
+               <p>Life Cereal is a great breakfast or midnight snack. Be careful not to add too much milk and soak it,
+                  because Life is at its best when it retains some of its crunch.</p>
             </div>
-            <img src="images/life.png">
+            <img src="images/life.png" alt="Life Cereal Box">
          </div>
          <div class="results">
             <div>
                <h3>Lucky Charms</h3>
                <p>Quantity: <span>5</span></p><br>
-               <p>Info Info Info Info Info Info Info</p>
+               <p>Lucky Charms is a wonderful breakfast, sweet treat or snack. Lucky charms is enjoyed by everyone,
+                  especially sugary ceral enthusiasts.</p>
             </div>
-            <img src="images/luckycharms.png">
+            <img src="images/luckycharms.png" alt="Lucky Charms Box">
          </div>
          <div class="results">
             <div>
                <h3>Mini Wheats</h3>
                <p>Quantity: <span>5</span></p><br>
-               <p>Info Info Info Info Info Info Info</p>
+               <p>Mini Wheats makes for an exceptional cereal when eaten correctly. Avoid soaking the cereal with too
+                  much milk, but make sure to dip each square in the milk before biting to avoid dryness. Fruit is
+                  recommended.</p>
             </div>
-            <img src="images/miniwheats.png">
+            <img src="images/miniwheats.png" alt="Miniwheats box">
          </div>
          <div class="results">
             <div>
                <h3>Raisin Bran</h3>
                <p>Quantity: <span>5</span></p><br>
-               <p>Info Info Info Info Info Info Info</p>
+               <p>Raisin Bran is perfect for those who like their cereal less sweet, because the raisins prevent the
+                  taste from becoming too "boring". For extra texture, try Raisin Bran Crunch.</p>
             </div>
-            <img src="images/rbran.png">
+            <img src="images/rbran.png" alt="Raisin Bran Box">
          </div>
          <div class="results">
             <div>
                <h3>Reeces Puffs</h3>
                <p>Quantity: <span>5</span></p><br>
-               <p>Info Info Info Info Info Info Info</p>
+               <p>Peanut butter, chocolate, great when separate! But when they combine they make the morning time epic!
+                  Reese's Puffs, Reese's Puffs Eat 'em up, eat 'em up, eat 'em up, eat 'em up.</p>
             </div>
-            <img src="images/reeces.png">
+            <img src="images/reeces.png" alt="Reeces Puffs Box">
          </div>
          <div class="results">
             <div>
                <h3>Rice Krispies</h3>
                <p>Quantity: <span>5</span></p><br>
-               <p>Info Info Info Info Info Info Info</p>
+               <p>Rice Krispies are famous for their use in rice krispy treats. These are delicious, but as cereal they
+                  taste great with fruit, and you can mix them without overpowering the flavor of any other cereal. Try
+                  with yogurt!</p>
             </div>
-            <img src="images/ricekrisp.png">
+            <img src="images/ricekrisp.png" alt="Rice Krispes Box">
          </div>
          <div class="results">
             <div>
                <h3>Chocolate Cheerios</h3>
                <p>Quantity: <span>5</span></p><br>
-               <p>Info Info Info Info Info Info Info</p>
+               <p>Chocolate Cheerios are a less-sweet chocolatey cereal option. Best paired with fruit, Chocolate
+                  Cheerios make a great breakfast or snack.</p>
             </div>
-            <img src="images/scheerios.png">
+            <img src="images/scheerios.png" alt="Chocolate Cheerios Box">
          </div>
          <div class="results">
             <div>
                <h3>Special K: Red Berries</h3>
                <p>Quantity: <span>5</span></p><br>
-               <p>Info Info Info Info Info Info Info</p>
+               <p>Special K: Red Berries are perfect for those who enjoy fruit in their cereal but can't guarentee fruit
+                  will always be in stock in their fridge. A healthy option to be enjoyed alone, with fruit, or mixed
+                  with granola.</p>
             </div>
-            <img src="images/specialkred.png">
+            <img src="images/specialkred.png" alt="Special K Red Berries Box">
          </div>
          <div class="results">
             <div>
                <h3>Cocoa Krispies</h3>
                <p>Quantity: <span>5</span></p><br>
-               <p>Info Info Info Info Info Info Info</p>
+               <p>Cocoa Krispies make a great mixer with other chocolatey cereals. They can also be enjoyed by
+                  themselves, or try them with some fruit or chocolate granola. Try with yogurt!</p>
             </div>
-            <img src="images/cokisp.png">
+            <img src="images/cokisp.png" alt="Cocoa Krispies Box">
          </div>
          <div class="results">
             <div>
                <h3>Cocoa Pebbles</h3>
                <p>Quantity: <span>5</span></p><br>
-               <p>Info Info Info Info Info Info Info</p>
+               <p>Cocoa Pebbles are a best suited for sugary cereal fans that prefer chocolatey cereals. They can also
+                  be mixed with other chocolatey cereals to sweeten the overall taste. Try with yogurt!</p>
             </div>
-            <img src="images/cpebs.png">
+            <img src="images/cpebs.png" alt="Cocoa Pebbles Box">
          </div>
          <div class="results">
             <div>
                <h3>Special K: Fruit & Yogurt</h3>
                <p>Quantity: <span>5</span></p><br>
-               <p>Info Info Info Info Info Info Info</p>
+               <p>Special K: Fruit & Yogurt is a versatile cereal that can be eaten alone, or mixed with fruit, granola,
+                  and/or other cereals. It also serves as both a delicious breakfast and snack. </p>
             </div>
-            <img src="images/specialkpurp.png">
+            <img src="images/specialkpurp.png" alt="Special K Fruit and Yogurt Box">
          </div>
          <div class="results">
             <div>
                <h3>Golden Grahams</h3>
                <p>Quantity: <span>5</span></p><br>
-               <p>Info Info Info Info Info Info Info</p>
+               <p>If you like the taste of graham crackers, you will love the taste of Golden Grahams. Golden Grahams is
+                  a great option to fulfill a sweet tooth without offering overpowering sweetness.</p>
             </div>
-            <img src="images/fadre.png">
+            <img src="images/fadre.png" alt="Golden Grahams Box">
          </div>
          <div class="results">
             <div>
                <h3>Honey Oh's</h3>
                <p>Quantity: <span>5</span></p><br>
-               <p>Info Info Info Info Info Info Info</p>
+               <p>A less known cereal, Honey Oh's is essentially a sweeter version of Honey Nut Cheerios, with slightly
+                  more crunch. A must try cereal that tastes amazing by itself with just milk.</p>
             </div>
-            <img src="images/honeyos.png">
+            <img src="images/honeyos.png" alt="Honey Oh's Box">
          </div>
          <div class="results">
             <div>
                <h3>Krave</h3>
                <p>Quantity: <span>5</span></p><br>
-               <p>Info Info Info Info Info Info Info</p>
+               <p>If looking for a sweet treat or delicious snack, a bowl of Krave is a must try. For extreme chocolate
+                  cereal enjoyers, note that a double chocolate variant is also available.</p>
             </div>
-            <img src="images/krave.png">
+            <img src="images/krave.png" alt="Krave Box">
          </div>
       </div>
    </main>
