--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="top"></div>
       <a href="#main-content" id="skip" tabindex="0">Skip to Main Content</a>
       <nav>
-         <a href="index.html" class="current"><img src="images/cereal.png">CEREAL CORNER</a>
+         <a href="index.html" class="current"><img src="images/cereal.png" alt="cereal graphic">CEREAL CORNER</a>
          <a href="custom.html" class="noncurrent">Your Cereals</a>
          <a href="favs.html" class="noncurrent">Phil's Favs</a>
          <a href="about.html" class="noncurrent">About</a>
@@ -56,8 +56,8 @@
                <div class="image-container"></div>
                <p>
                <h3>Mixing Value: </h3> Mixing value represents how well a cereal can mix with granola or other cereals.
-               Mixing cereals is a great way to add flavor and diversify the texture of each bite. For mix enthusiasts,
-               Honey Bunches of Oats are a must.
+               Mixing cereals is a great way to add flavor and diversify the texture of each bite. Mixing is such a
+               underrated aspect of cereal, since it opens up so many new possibilities and flavors.
                </p>
             </div>
             <div class="card step" id="2" title="Try dragging to rotate through the cards">
@@ -96,15 +96,17 @@
       </div>
       <div id="arrows"><button id="right" tabindex="0">&lt</button><button id="left" tabindex="0">&gt</button></div>
       <div class="step intro">
-         <p>
-         <h3>Diversity: </h3> The final thing to think about is your cereal order's diversity. How many different types
-         of cereal do you hope to buy? Do you want the same thing every morning or do you like to have a large rotation?
-         When choosing your cereal order, note that a diversity rating of 10 corresponds to a limit of buying only up to
-         one box of each cereal, while a rating of 1 corresponds to a limit of 6.
+         <h3>Diversity: </h3>
+         <p> The final thing to think about is your cereal order's diversity. How many different types
+            of cereal do you hope to buy? Do you want the same thing every morning or do you like to have a large
+            rotation?
+            When choosing your cereal order, note that a diversity rating of 10 corresponds to a limit of buying only up
+            to
+            one box of each cereal, while a rating of 1 corresponds to a limit of 6.
          </p>
          <br>
-         <p>Also, note that the "Conserve my Money" checkbox will optimize your order, giving you the most ounces of
-            cereal for your specified price point and cereal preference. </p>
+         <p>Also, note that the "Conserve my Money" checkbox will optimize your order with price in mind, giving you the
+            most ounces of cereal for your specified price point and cereal preference. </p>
       </div>
       <br><br><br>
    </main>
@@ -134,6 +136,7 @@
    </div>
 </footer>
 <script src="js/cereal.js"></script>
+<script src="js/learncards.js"></script>
 <script src="js/carousel.js"></script>
 
 </html>
