img fix attempt 1

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="top"></div>
       <a href="#main-content" id="skip" tabindex="0">Skip to Main Content</a>
       <nav>
-         <a href="index.html" class="current"><img src="images/cereal.png" alt="cereal graphic">CEREAL CORNER</a>
+         <a href="index.html" class="current"><img src="images/cereal.png" alt="Cereal Graphic">CEREAL CORNER</a>
          <a href="custom.html" class="noncurrent">Your Cereals</a>
          <a href="favs.html" class="noncurrent">Phil's Favs</a>
          <a href="about.html" class="noncurrent">About</a>
