--- a/favs.html
+++ b/favs.html
@@ -18,7 +18,7 @@
       <div class="top"></div>
       <a href="#main-content" id="skip" tabindex="0">Skip to Main Content</a>
       <nav>
-         <a href="index.html" class="noncurrent"><img src="images/cereal.png">CEREAL CORNER</a>
+         <a href="index.html" class="noncurrent"><img src="images/cereal.png" alt="Cereal Graphic">CEREAL CORNER</a>
          <a href="custom.html" class="noncurrent">Your Cereals</a>
          <a href="favs.html" class="current">Phil's Favs</a>
          <a href="about.html" class="noncurrent">About</a>
